<resources>
    <string name="app_name">AceQLAndroidDemo</string>
    <string name="action_settings">Settings</string>

    <string name="pref_default_data_sync_backend_url">jdbc:aceql:http://192.168.116.1:9090/ServerSqlManager</string>
    <string name="output_shows_here">The first row from the SQL query shows up here</string>
    <string name="sql_input_hint">Enter an SQL query to execute. \nFor this test, it must be a select statement that returns only one string column!</string>
    <string name="execute">Execute</string>
    <string name="loading">Loading…</string>
    <string name="sql_query_label">SQL Query</string>
    <string name="server_url_label">Server URL</string>
    <string name="server_url_hint">It is usually of the form:\n jdbc:aceql:http://server_ip_here:9090/ServerSqlManager</string>
    <string name="server_url_default">It is usually of the form:\n jdbc:aceql:http://server_ip_here:9090/ServerSqlManager</string>
    <string name="error_occured">An error occurred: </string>
    <string name="see_log">Check the Android Log for more information.</string>
    <string name="no_result_sets">Received no result sets from query</string>
</resources>
