<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aspirephile.aceqlandroid.demo.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_url_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_url_hint"
        android:inputType="textMultiLine"
        android:text="@string/server_url_default"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_query_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sql_input_hint"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/b_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/execute"/>

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ripple_material_light"
        android:text="@string/output_shows_here"/>

</LinearLayout>
